crates/rimap-server/src/tools/compose/snapshots/rimap_server__tools__compose__message_builder__outbound_bytes_snapshots__long_non_ascii_subject_and_names.snap
---
source: crates/rimap-server/src/tools/compose/message_builder.rs
expression: "normalize(&raw, false)"
---
From: <alice@example.com>
To: =?utf-8?B?Wm/DqyDDhW5nc3Ryw7Zt?= <zoe@example.com>,
 =?utf-8?B?55Sw5LitIOWkqumDjg==?= <tanaka@example.jp>
Subject: =?utf-8?Q?R=C3=A9sum=C3=A9_of_the_=C3=9Cbersicht_meeting_?=
 =?utf-8?Q?=E2=80=94_na=C3=AFve_fa=C3=A7ade_co=C3=B6peration_notes,_with_a?=
 =?utf-8?Q?_deliberately_long_tail_so_the_encoded_words_must_fold_?=
 =?utf-8?Q?=E6=9D=B1=E4=BA=AC?=
Message-ID: <MESSAGE-ID>
Date: Tue, 14 Nov 2023 22:13:20 +0000
MIME-Version: 1.0
Content-Type: text/plain; charset="utf-8"
Content-Transfer-Encoding: 7bit

Body.
