crates/rimap-server/src/tools/compose/snapshots/rimap_server__tools__compose__message_builder__outbound_bytes_snapshots__plain_ascii_text.snap
---
source: crates/rimap-server/src/tools/compose/message_builder.rs
expression: "normalize(&build(&msg, Vec::new()), false)"
---
From: <alice@example.com>
To: "Bob" <bob@example.com>
Subject: Quarterly report
Message-ID: <MESSAGE-ID>
Date: Tue, 14 Nov 2023 22:13:20 +0000
MIME-Version: 1.0
Content-Type: text/plain; charset="utf-8"
Content-Transfer-Encoding: 7bit

Hi Bob,

Numbers attached next week.
